fixed issues where session is not clear and image not showing up on Safari

--- a/sources/sass/sbplus.scss
+++ b/sources/sass/sbplus.scss
@@ -504,11 +504,11 @@ body {
                         
                         // Image
                         .img_only {
-                            display: block;
-                            width: auto;
-                            max-width: 100%;
+                            //display: block;
+                            //width: auto;
+                            width: 100%;
                             height: 100%;
-                            margin: 0 auto;
+                            //margin: 0 auto;
                             object-fit: contain;
                         }
                         
@@ -1042,7 +1042,7 @@ body {
                         @include flex( 2 0 90% );
                         padding-top: 9px;
                         text-align: center;
-                        text-indent: -10%;
+//                         text-indent: -10%;
                         font-weight: bold;
                         font-size: 12px;
                         line-height: 12px;
